<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/Heb_Custom_Layout_Root"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/Heb_Custom_Layout_Row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:tag="row"
        android:layout_margin="5dp">
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key1"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_1"/>
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key2"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_2"/>
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key3"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_3"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Heb_Custom_Layout_Row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:tag="row"
        android:layout_margin="5dp">
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key4"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_4"/>
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key5"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_5"/>
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key6"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_6"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Heb_Custom_Layout_Row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:tag="row"
        android:layout_margin="5dp">
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key7"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_7"/>
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key8"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_8"/>
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key9"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_9"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Heb_Custom_Layout_Row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:tag="row"
        android:layout_margin="5dp">
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key10"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_10"/>
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key11"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_11"/>
        <tal.tal.gestures_accessible_keyboard.keyboard.keys_area.Key
            android:id="@+id/Heb_Custom_Key12"
            android:layout_width="@dimen/Keys_Layout_Width"
            android:layout_height="@dimen/Keys_Layout_Height"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@color/Keys_Background"
            android:contentDescription=""
            android:tag="@string/HebTweet_12"/>
    </LinearLayout>
</LinearLayout>